--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -41,7 +41,7 @@
             }
             //adiciona um conteudo no final da tag <a>. Before tbm serviria
             &.active::after {
-                content: "";
+                content: '';
                 height: 3px;
                 border-radius: 3px 3px 0 0;
                 width: 100%;
@@ -51,6 +51,10 @@
                 background: var(--yellow-500);
             }
         }
+    }
+
+    button{
+        margin-left: auto;
     }
 }
 
